@@ -1,3 +1,7 @@
+2008-12-18  Dmitry Dulepov  <dmitry@typo3.org>
+
+	* Fixed bug #9999: Setting [BE][compressionLevel]=true causes problems
+
 2008-12-23  Steffen Kamper  <info@sk-typo3.de>
 
 	* Fixed bug #9810: ClearCacheMenu doesn't work when click on icon
